# mits-validator-api

./: .editorconfig  .env.example  .gitignore  BODY_SIZE_LIMIT.md  BUG_FIXES_SUMMARY.md  DOCKER_QUICKSTART.md  Dockerfile  LICENSE  MITS_QUICKSTART.md  MITS_VALIDATOR_GUIDE.md  Makefile  PRODUCTION_READINESS.md  PRODUCTION_SUMMARY.txt  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  RULE_41_REMOVAL.md  TESTING_SUMMARY.md  TEST_COVERAGE_STATUS.md  TEST_FIXES_SUMMARY.md  TEST_PLAN.md  TEST_RESULTS.md  TEST_STATUS.md  TEST_SUMMARY.txt  VALIDATOR_NAMING.md  docker-compose.yml  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
app/: __init__.py  config.py  errors.py  main.py  middleware.py  security.py
app/api/: v5.py
app/models/: __init__.py  dto.py
app/services/: __init__.py  validation_service.py
app/validators/: __init__.py  xml_basic.py
app/validators/mits/: __init__.py  amount_basis.py  amount_format.py  base.py  charge_class.py  class_limits.py  cross_validation.py  data_quality.py  enums.py  fee_hierarchy.py  frequency_alignment.py  identity_uniqueness.py  item_characteristics.py  offer_item_structure.py  orchestrator.py  parking_validation.py  pet_validation.py  section_a_xml_basics.py  section_b_fee_placement.py  section_c_identity.py  section_d_class_structure.py  section_e_class_limits.py  section_f_offer_items.py  section_g_characteristics.py  section_h_amount_basis.py  section_i_amount_blocks.py  section_j_frequency.py  section_k_pet_items.py  section_l_parking_items.py  section_m_storage_items.py  section_n_o_p_integrity.py  section_q_r_s_t_final.py  storage_validation.py  xml_structure.py
scripts/: fix_element_types.py  rename_validators.py
tests/: __init__.py  conftest.py  test_api_validate.py  test_full.xml  test_partial.xml  test_validation_service.py  test_xml_basic.py
tests/validators/: __init__.py
tests/validators/mits/: __init__.py  conftest.py  test_amount_basis.py  test_charge_class.py  test_end_to_end.py  test_fee_hierarchy.py  test_identity_uniqueness.py  test_item_characteristics.py  test_offer_item_structure.py  test_orchestrator.py  test_xml_structure.py
